--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>作品集 - Personal Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/9fqYVvxh/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/W3cg8jqh/logo.png" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -138,6 +138,19 @@
                     </div>
 
                     <ul class="project-list">
+                        <li class="project-item active" data-filter-item data-category="网页设计">
+                            <a href="project-detail.html?id=ykdhtglxt">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="https://i.postimg.cc/htmKR7tZ/web-ykdhtglxt.png" alt="亿科达合同管理系统" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">亿科达合同管理系统</h3>
+                                <p class="project-category">网页设计</p>
+                            </a>
+                        </li>
+
                         <li class="project-item active" data-filter-item data-category="网页设计">
                             <a href="project-detail.html?id=phjgpt">
                                 <figure class="project-img">
@@ -408,6 +421,32 @@
                                 </figure>
                                 <h3 class="project-title">云闪付版迪迪救援</h3>
                                 <p class="project-category">移动端设计</p>
+                            </a>
+                        </li>
+
+                        <li class="project-item active" data-filter-item data-category="三维设计">
+                            <a href="project-detail.html?id=clcj">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="https://i.postimg.cc/kMK9LC67/3D-clcj.png" alt="车辆场景" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">车辆场景</h3>
+                                <p class="project-category">三维设计</p>
+                            </a>
+                        </li>
+
+                        <li class="project-item active" data-filter-item data-category="其他">
+                            <a href="project-detail.html?id=ppt">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="https://i.postimg.cc/fyKQRx9D/other-ppt.png" alt="PPT排版设计" loading="lazy">
+                                </figure>
+                                <h3 class="project-title">PPT排版设计</h3>
+                                <p class="project-category">其他</p>
                             </a>
                         </li>
 
