--- a/project-detail.html
+++ b/project-detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>项目详情 - Personal Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/9fqYVvxh/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/W3cg8jqh/logo.png" type="image/x-icon">
 </head>
 <body>
     <main>
