--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人简历 - Personal Portfolio</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/9fqYVvxh/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.postimg.cc/W3cg8jqh/logo.png" type="image/x-icon">
 </head>
 <body>
     <main>
@@ -176,6 +176,13 @@
                             <span>2022年 - 2023年</span>
                             <p class="timeline-text">参与项目的优化设计搭建了公车管理智慧监督平台，形成统一的数据集市，海量数据自动匹配，实现公车管理的嵌入式监督，管理模式从“人治”走向“自治”。</p>
                             <p class="timeline-text">做到了：数据融合，数据分析，数据可视化，数据预警，数据决策，数据监督，数据治理，数据安全，数据共享，数据服务，数据创新。江苏电力，河南电力，国网电力等多家电力公司使用。</p>
+                        </li>
+
+                        <li class="timeline-item">
+                            <h4 class="h4 timeline-item-title">企业宣传设计资源库</h4>
+                            <span>2022年 - 至今</span>
+                            <p class="timeline-text">在企业宣传设计资源优化中，我主导搭建日常宣传设计资源库。库内有适配多场景的 PPT 模板、三维素材库，以及分类清晰的 icon 库。符合企业风格的内容扩充资源库，并规范格式、调整排版与色彩，提升资源品质。</p>
+                            <p class="timeline-text">资源库投入使用后，能快速找到素材，工作效率大幅提升。同时设计作品更专业统一，增强宣传吸引力与辨识度，有力推动企业品牌传播与业务推广。</p>
                         </li>
 
                         <li class="timeline-item">
